--- a/Modules.yml
+++ b/Modules.yml
@@ -2,7 +2,7 @@ ansible all -m yum -a "name=git state=present"
 
 ansible all -m service -a "name=httpd state=started"
 
-ansible all -m service -a "name=httpd state=started"
+ansible all -m service -a "name=httpd state=stopped"
 
 ansible all -m copy -a "src=madhu.txt  dest=/tmp"
 
