Update ansible playbook madhu.yml

--- a/ansible playbook madhu.yml
+++ b/ansible playbook madhu.yml
@@ -22,4 +22,8 @@
       tags: e
 
 
-# For to check the indentation errors or mistakes.  
+# For to check the indentation errors or mistakes. We have online validators 
+# --> 1. YAMLINT
+# --> 2. Yaml formatter
+# --> 3. yaml validator
+# --> 4. chatgpt
